--- a/config/linux/waybar/style.css
+++ b/config/linux/waybar/style.css
@@ -1,4 +1,5 @@
-@import "../omarchy/current/theme/waybar.css";
+@define-color foreground #cdd6f4;
+@define-color background #1a1b26;
 
 * {
   background-color: @background;
@@ -7,7 +8,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: CaskaydiaMono Nerd Font;
+  font-family: BerkeleyMono Nerd Font Mono;
   font-size: 12px;
 }
 
